# EBRT

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile_commands.json
src/: main.c
src/math/: math.c  math.h
src/mesh/: mesh.h
src/util/: object.h  vect.c  vect.h
